updated index.html | Sandeep Singh

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to My Static Website - v2</h1>
+    <h1>Welcome to My Static Website </h1>
   </header>
 
   <main>
     <section>
-      <h2>Coffee Time</h2>
+      <h2>Coffee Time!-----Yup</h2>
       <p>There's nothing like a cup of fresh coffee to start your day right.</p>
       <img src="/images/coffee.jpg" alt="A cup of coffee" />
     </section>
