Update heading text in index.html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
   <main>
     <section>
-      <h2>Coffee Time!-----Yup</h2>
+      <h2>Coffee Time!-----Yup!!!!</h2>
       <p>There's nothing like a cup of fresh coffee to start your day right.</p>
       <img src="/images/coffee.jpg" alt="A cup of coffee" />
     </section>
